test/spec_vectors/local_tee/fail/module_36.wat
(module (type $t (func)) (func $f (param (ref null $t))) (func (local $x funcref) (ref.null $t) (local.tee $x) (call $f)))